--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,3 +6,4 @@ aux_source_directory(. Dungeon_SRCS)
 include_directories(.)
 add_executable(tests ${Dungeon_SRCS})
 add_custom_target(format for i in *.cpp *.hpp\; do clang-format -i $$i\; done)
+set_property (DIRECTORY APPEND PROPERTY ADDITIONAL_MAKE_CLEAN_FILES "html" "latex")
