--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,9 +5,9 @@ add_subdirectory (src)
 # Make dox target that runs doxygen.
 add_custom_target(dox
    cd ${CMAKE_SOURCE_DIR}\;
-   doxygen)
+   (cat Doxyfile\; echo "OUTPUT_DIRECTORY=${CMAKE_BINARY_DIR}") | doxygen -)
 
 # Make it so that html and latex directories are removed on clean.
 set_property (DIRECTORY APPEND PROPERTY ADDITIONAL_MAKE_CLEAN_FILES
-   "${CMAKE_SOURCE_DIR}/html"
-   "${CMAKE_SOURCE_DIR}/latex")
+   "${CMAKE_BINARY_DIR}/html"
+   "${CMAKE_BINARY_DIR}/latex")
