More subdirs; better ycm.

--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -1,5 +1,8 @@
+add_subdirectory (abilities)
+
 add_library (dungeon SHARED
-   basic-abilities.cpp
-   initial-abilities.cpp
    race.cpp
    roll-dice.cpp)
+
+target_include_directories (dungeon PRIVATE .)
+target_link_libraries (dungeon abilities)
