--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -1,9 +1,8 @@
 add_executable (tests
-   initial-abilities-test.cpp
+   abilities-initial-test.cpp
    race-test.cpp
    roll-dice-test.cpp
    tests.cpp)
 
 target_link_libraries (tests dungeon)
-target_include_directories (tests PRIVATE ${CMAKE_SOURCE_DIR}/src/lib)
-target_link_directories (tests PRIVATE ${CMAKE_SOURCE_DIR}/src/lib)
+target_include_directories (tests PRIVATE ../lib)
