--- a/src/lib/abilities/CMakeLists.txt
+++ b/src/lib/abilities/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_library (abilities SHARED
    basic.cpp
-   initial.cpp)
+   initial.cpp
+   streng-tab.cpp)
 
 target_include_directories (abilities PRIVATE ..)
