--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -1,8 +1,8 @@
-add_subdirectory (abilities)
+add_subdirectory (ability)
 
 add_library (dungeon SHARED
    race.cpp
    roll-dice.cpp)
 
 target_include_directories (dungeon PRIVATE .)
-target_link_libraries (dungeon abilities)
+target_link_libraries (dungeon ability)
