--- a/src/lib/ability/CMakeLists.txt
+++ b/src/lib/ability/CMakeLists.txt
@@ -1,6 +1,10 @@
 add_library (ability SHARED
+   charis-tab.cpp
+   consti-tab.cpp
+   dexter-tab.cpp
    initial.cpp
-   scores.cpp
-   streng-tab.cpp)
+   intell-tab.cpp
+   streng-tab.cpp
+   wisdom-tab.cpp)
 
 target_include_directories (ability PRIVATE ..)
