--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -1,8 +1,8 @@
 add_subdirectory (ability)
+add_subdirectory (race)
 
 add_library (dungeon SHARED
-   race.cpp
    roll-dice.cpp)
 
 target_include_directories (dungeon PRIVATE .)
-target_link_libraries (dungeon ability)
+target_link_libraries (dungeon ability race)
